
<resources>
    <string name="app_name" translatable="false">POS Demo</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="ok" translatable="false">OK</string>

    <string name="version_app">Version</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>

    <string name="slide_intro_1_title">Secure</string>
    <string name="slide_intro_1_description">Is secure, believe me</string>

    <string name="slide_intro_2_title">Fast</string>
    <string name="slide_intro_2_description">Fast like a thunder</string>

    <string name="slide_intro_3_title">innovation</string>
    <string name="slide_intro_3_description">Prepared for do something amazing!</string>

    <string name="read_privacy_policy">I Read!</string>
    <string name="login">Login</string>
</resources>